# BEE2BEE

./: .env.example  MANIFEST.in  P2P_SETUP_GUIDE.md  README.md  SUPABASE_SCHEMA.sql  pyproject.toml  requirements-all.txt  requirements.txt  run.sh  vercel.json
.github/workflows/: actions.yaml
app/: README.md  electron-builder.json5  index.html  package-lock.json  package.json  server.js  tsconfig.json  vercel.json  vite.config.js
app/api/: bridge.js  index.js  server.js
app/src/: App.jsx  App.tsx.bak  index.css
app/src/api/: index.js
app/src/components/ui/: globe-cdn.tsx
bee2bee/: __init__.py  __main__.py  api.py  hf.py  nat.py  node.py  p2p.py  p2p_runtime.py  registry.py  services.py  stun_client.py  utils.py
bee2bee-3.5.16/: pyproject.toml
bee2bee-3.6.27/scripts/: debug_generation.py
bee2bee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
connectit/: __main__.py  api.py  p2p_runtime.py  services.py  utils.py
desktop-app/src/: App.tsx
electron-app/: README.md  index.html  package-lock.json  package.json
electron-app/src/: App.tsx  index.css
electron-app/src/components/ui/: badge.tsx  globe-cdn.tsx
examples/: p2p_solution_guide.py
notebook/: developing_with_p2p.ipynb
tauri-app/: package-lock.json  package.json
tests/: test_api.py  test_nat_optional.py
